force-app/main/default/objects/Study_Plan__c/Study_Plan__c.object-meta.xml
<CustomObject>
    <description>Personal certification roadmap per learner: target exam date, weekly hours and completion status, used by the CertificationPrepService to keep study plans On Track.</description>
    <label>Study Plan</label>
    <nameField>
        <label>Study Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>