force-app/main/default/objects/Study_Plan__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <defaultValue>Salesforce Administrator</defaultValue>
    <label>Certification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Administrator</fullName>
                <default>true</default>
                <label>Salesforce Administrator</label>
            </value>
            <value>
                <fullName>Advanced Administrator</fullName>
            </value>
            <value>
                <fullName>Platform App Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>