force-app/main/default/objects/Study_Plan__c/fields/Completed_Domains__c.field-meta.xml
<CustomField>
    <fullName>Completed_Domains__c</fullName>
    <label>Completed Domains</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>