force-app/main/default/objects/Study_Plan__c/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <label>Learner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Study Plans</relationshipLabel>
    <relationshipName>Study_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>